kubernetes/clusters/1276-prod/pelican/pelican/base/httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pelican-internal
spec:
  parentRefs:
    - name: eg-internal
      namespace: envoy-gateway-system
  hostnames:
    - pelican.techgarden.gg
  rules:
    - backendRefs:
        - name: pelican
          port: 80
